# PKGBUILD-parser-QT

./: CMakeLists.txt  README.md
